integration modifications