@@ -1,6 +1,7 @@
 package services;
 
 import entities.Seat;
+import entities.Booking;
 import entities.enums.SeatStatus;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -11,7 +12,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -30,19 +31,32 @@ public class SeatService {
         return seatRepository.findByRoomId(roomId);
     }
 
-    public List<Seat> searchAvailableSeats(String status, Boolean nearWindow, Boolean hasMonitor,
-                                           Boolean hasStandupDesk, LocalDate date, LocalTime startTime,
-                                           LocalTime endTime) {
+    public record SeatAvailability(Seat seat, String occupiedBy) {}
+
+    /**
+     * A permanently non-reservable seat keeps its own status. An otherwise
+     * reservable seat becomes occupied only for an overlapping booking.
+     */
+    public List<SeatAvailability> searchSeatsWithAvailability(String status, Boolean nearWindow, Boolean hasMonitor,
+                                                               Boolean hasStandupDesk, LocalDate date, LocalTime startTime,
+                                                               LocalTime endTime) {
         SeatStatus seatStatus = parseSeatStatus(status);
         List<Seat> seats = seatRepository.findWithFilters(seatStatus, nearWindow, hasMonitor, hasStandupDesk);
         if (date == null || startTime == null || endTime == null) {
-            return seats;
+            return seats.stream().map(seat -> new SeatAvailability(seat, null)).toList();
         }
 
-        List<Integer> bookedSeatIds = bookingRepository.findBookedSeatIdsByInterval(date, startTime, endTime);
+        Map<Integer, String> occupantsBySeat = bookingRepository
+                .findBookedSeatsWithUsersByInterval(date, startTime, endTime)
+                .stream()
+                .filter(booking -> booking.getSeat() != null && booking.getSeat().getId() != null)
+                .collect(java.util.stream.Collectors.toMap(
+                        booking -> booking.getSeat().getId(),
+                        booking -> booking.getUser().getFirstName() + " " + booking.getUser().getLastName(),
+                        (first, ignored) -> first));
         return seats.stream()
-                .filter(seat -> seat.getId() != null && !bookedSeatIds.contains(seat.getId()))
-                .collect(Collectors.toList());
+                .map(seat -> new SeatAvailability(seat, seat.getId() == null ? null : occupantsBySeat.get(seat.getId())))
+                .toList();
     }
 
     private SeatStatus parseSeatStatus(String status) {
